# fmod_test

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
fmod/: .gitignore
fmod/Metadata/: Master.xml  Mixer.xml  Tags.xml  Workspace.xml
fmod/Metadata/Asset/: {02d989e0-3abb-4809-b28d-a6159af1da3e}.xml
fmod/Metadata/AudioFile/: {3860e956-9ac3-4f29-9584-185b51f2fff6}.xml  {6df8d4d8-a285-4e05-8333-6a8e70ca38cb}.xml  {a6bfae5b-c840-414a-a280-440137d00721}.xml
fmod/Metadata/Bank/: {bd0463f9-963e-48e9-b129-db13762e3f79}.xml
fmod/Metadata/BankFolder/: {71931ac3-77ce-489f-8dd6-228fd413ccf9}.xml
fmod/Metadata/EffectPresetFolder/: {4b7e20aa-b2d7-4f1e-b381-21709adb829b}.xml
fmod/Metadata/EncodingSetting/: {141cbc6d-5001-46a0-b0e9-5638665d797b}.xml
fmod/Metadata/Event/: {0393fae6-dc91-4326-ac7b-2fd2fb725dc9}.xml
fmod/Metadata/EventFolder/: {13acb09f-35b9-4c61-a302-ced0057f15db}.xml
fmod/Metadata/ParameterPresetFolder/: {3b5db81b-1908-4a5f-91a9-2243566ab660}.xml
fmod/Metadata/Platform/: {076f681f-e087-44aa-af06-b51ccc7d8e32}.xml
fmod/Metadata/ProfilerFolder/: {9f4496a4-9b85-42c7-b662-39e2e7f1c3ce}.xml
fmod/Metadata/Return/: {decf3bda-d837-4de6-ad16-a211cabeb5eb}.xml
fmod/Metadata/SandboxFolder/: {9aa97f05-bb05-4c87-97c1-a4a84f285b40}.xml
fmod/Metadata/SnapshotGroup/: {ca7e203c-0684-4aa5-8b30-1f0d57b68376}.xml
fmod/main/.cache/: {54b2266a-fd39-4014-974a-9e1ebd23203d}.pdc  {6bb1d17c-2f20-4d03-901c-87b694c35ccf}.pdc  {7106af4f-078a-470d-b941-211eec440ada}.pdc  {c0eb92e5-9409-4bcc-bf99-1e115324e099}.pdc  (+1 more)
src/: main.rs  path.rs
(+56 files in other folders)
