[package]
name = "fmod_test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
sdl2 = "0.37.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.fmod-oxide]
# Soething is up with versions of this lib :(
git = "https://github.com/melody-rs/fmod-oxide"
branch = "main"
