[package]
name = "fmod_test"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.97"
lazy_static = "1.5.0"
sdl2 = "0.37.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.fmod-oxide]
# Soething is up with versions of this lib :(
git = "https://github.com/melody-rs/fmod-oxide"
branch = "main"
